--- a/WCV_Collisions_Data/wcv_collisions.ipynb
+++ b/WCV_Collisions_Data/wcv_collisions.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from spellchecker import SpellChecker"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +196,7 @@
        "4     Released  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +259,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,17 +273,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Common Species Name   spelling_errors\n",
+      "0      Yellow-Bellied Slider  {yellow-bellied}\n",
+      "2        Eastern Screech-Owl     {screech-owl}\n",
+      "3        Eastern Screech-Owl     {screech-owl}\n",
+      "5        Red-Shouldered Hawk  {red-shouldered}\n",
+      "7           Virginia Opossum        {virginia}\n",
+      "...                      ...               ...\n",
+      "1730  Red-Bellied Woodpecker     {red-bellied}\n",
+      "1731     Eastern Screech-Owl     {screech-owl}\n",
+      "1732     Eastern Screech-Owl     {screech-owl}\n",
+      "1734     Pileated Woodpecker        {pileated}\n",
+      "1738     Pileated Woodpecker        {pileated}\n",
+      "\n",
+      "[776 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "species_names = df['Common Species Name']\n",
+    "\n",
+    "# Standardize capitalization (e.g., capitalize the first letter of each word)\n",
+    "df['Common Species Name'] = species_names.str.title()\n",
+    "\n",
+    "# Initialize the spell checker\n",
+    "spell = SpellChecker()\n",
+    "\n",
+    "# Function to find spelling errors\n",
+    "def check_spelling(name):\n",
+    "    words = name.split()\n",
+    "    misspelled = spell.unknown(words)\n",
+    "    return misspelled\n",
+    "\n",
+    "# Apply the spelling check function to each species name\n",
+    "df['spelling_errors'] = species_names.apply(check_spelling)\n",
+    "\n",
+    "# Filter rows with spelling errors\n",
+    "spelling_error_rows = df[df['spelling_errors'].apply(len) > 0]\n",
+    "\n",
+    "# Display rows with spelling errors\n",
+    "print(spelling_error_rows[['Common Species Name', 'spelling_errors']])\n",
+    "\n",
+    "# Save the cleaned DataFrame to a new CSV file if needed\n",
+    "df.to_csv('cleaned_species_database.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#TODO Check the species name col for capitalization consistency and spelling errors "
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "wildlife",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -296,9 +350,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
